[project]
name = "secret-santa"
version = "0.0.1"
description = "My own project"
authors = [
    {name = "GulpeIT",email = "grishawork-01@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
    "black (>=25.1.0,<26.0.0)",
]
